--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,11 @@
-.App {
-  align-self: center;
-  justify-self: center;
-}
-
 #root {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-  Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  height: 100vh;
-  display: grid;
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   font-size: 18px;
+  height: 100vh;
 }
 
-.container {
+/* .container {
   width: 300px;
   background-color: #eee;
   text-align: center;
@@ -52,4 +46,4 @@ input.full-width {
   margin: 0 auto;
   margin-bottom: 9px;
   text-align: center;
-}
+} */
