--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@
   height: 100vh;
 }
 
-/* .container {
+.container {
   width: 300px;
   background-color: #eee;
   text-align: center;
@@ -46,4 +46,4 @@ input.full-width {
   margin: 0 auto;
   margin-bottom: 9px;
   text-align: center;
-} */
+}
